--- a/src/App.css
+++ b/src/App.css
@@ -120,58 +120,30 @@ body {
   background-color: #0f2027;
 }
 
-/* Добавьте стили для размытия фона навбара */
-nav::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  filter: blur(10px);
-  opacity: 0.8;
-  z-index: -1;
+.bootstrap-navbar {
+  background-color: rgba(0, 0, 20, 0.7) !important;
 }
 
-/* Измените стили для навбара */
-.nav-style {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(0, 0, 20, 0.1);
-  padding: 1rem;
+/* Обновленные стили для аккордеона */
+.nav-dropdown-item {
+  color: #f1f1f1 !important;
+  background-color: rgba(0, 0, 20, 0.7) !important;
 }
 
-.nav-left {
-  margin-right: auto;
+.nav-dropdown-item:hover {
+  background-color: rgba(0, 0, 20, 0.5) !important;
+  color: #ffffff !important;
 }
 
-/* Увеличьте размер текста и сделайте его светлым */
-nav ul li a {
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #f1f1f1;
+.bootstrap-navbar a {
+  font-size: 1.5rem !important;
+  color: #f1f1f1 !important;
 }
 
-/* Измените активный и hover стили */
-nav ul li a.active,
-nav ul li a:hover {
-  font-weight: bold;
-  color: #ffffff;
+.bootstrap-navbar a:hover {
+  color: #ffffff !important;
 }
 
-/* Отключите ссылку на Access Points */
-nav ul li a.disabled {
-  pointer-events: none;
-}
-.plot-container {
-  position: relative;
-  display: inline-block;
-  background: #0f2027;
-  background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
-  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
-  border-radius: 8px;
-  overflow: hidden;
+.bootstrap-navbar a.active {
+  color: #ffffff !important;
 }
