--- a/src/components/calculator/SignalLossCalculator.module.css
+++ b/src/components/calculator/SignalLossCalculator.module.css
@@ -12,8 +12,16 @@
   color: #ffffff;
 }
 
+.textBlack {
+  color: #0f2027;
+}
+
 .inputSelect {
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.selectSpacing {
+  margin-right: 16px;
 }
