--- a/src/components/charts/plotstyles.css
+++ b/src/components/charts/plotstyles.css
@@ -7,6 +7,6 @@
 .plot-wrapper {
   display: inline-block;
   padding: 10px;
-  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+  background: linear-gradient(to right, #121e35, #0b1a2c, #0b1129);
   border-radius: 10px;
 }
