--- a/src/components/visibility/FieldVisibilityController.css
+++ b/src/components/visibility/FieldVisibilityController.css
@@ -2,9 +2,9 @@
   position: relative;
   /*display: inline-block;*/
   padding: 1rem;
-  background: #0f2027;
-  background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
-  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+  background: #0b1129;
+  background: -webkit-linear-gradient(to right, #121e35, #0b1a2c, #0b1129);
+  background: linear-gradient(to right, #121e35, #0b1a2c, #0b1129);
   border-radius: 8px;
   overflow: hidden;
 }
