--- a/src/App.css
+++ b/src/App.css
@@ -15,59 +15,59 @@ body {
     rgba(11, 26, 44, 1) 65%,
     rgba(12, 18, 36, 1) 98%
   );
+
+  /*background-color: #fff;*/
 }
 
 .flex-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 823px;
 }
 
 .ag-theme-alpine {
   height: 100%;
   width: 100%;
-  font-family: "Josefin Sans", sans-serif; /* Используйте шрифт Josefin Sans */
+  font-family: "Josefin Sans", sans-serif;
+  background-color: #121b30;
+  scrollbar-height: thin;
 }
 
 .obstacles-table-wrapper {
   height: 90%;
 }
 
-.ag-theme-alpine {
-  background-color: #0b1129;
-}
-
 /* Измените стиль заголовков таблицы */
 .ag-theme-alpine .ag-header-cell {
-  background-color: #0b1a2c; /* Глубокий синий цвет для заголовков */
-  color: #f0f2f5;
-  border-right: 1px solid #121e35;
+  background-color: #131d44; /* Darker Blue */
+  color: #ffffff;
+  border-right: 1px solid #19232d;
 }
 
 /* Измените стиль строк таблицы */
 .ag-theme-alpine .ag-row {
-  border-bottom: 1px solid #121e35;
+  border-bottom: 1px solid #19232d;
 }
 
 /* Измените стиль фона четных строк таблицы */
 .ag-theme-alpine .ag-row:nth-child(even) {
-  background-color: #0b1a2c; /* Глубокий синий для четных строк */
+  background-color: #1c2649; /* Dark Blue */
 }
 
 /* Измените стиль фона нечетных строк таблицы */
 .ag-theme-alpine .ag-row:nth-child(odd) {
-  background-color: #0b1129; /* Используйте средний цвет вашей цветовой схемы для нечетных строк */
+  background-color: #131b38; /* Very Dark Blue */
 }
 
 /* Измените стиль выделенных строк таблицы */
 .ag-theme-alpine .ag-row.ag-row-selected {
-  background-color: #0c1224; /* Используйте самый темный цвет вашей цветовой схемы для выделенных строк */
+  background-color: #4b5969;
   color: #ffffff;
 }
 
 /* Измените стиль текста ячеек таблицы */
 .ag-theme-alpine .ag-cell {
-  color: #f0f2f5;
+  color: #ffffff;
 }
 
 /* Измените стиль текста ячеек таблицы при наведении */
@@ -77,42 +77,55 @@ body {
 
 /* Измените цвет фона ячеек таблицы при наведении */
 .ag-theme-alpine .ag-row.ag-row-hover {
-  background-color: #121e35; /* Используйте цвет, который немного темнее, чем средний цвет вашей цветовой схемы */
+  background-color: #1d3049; /* Lighter Blue */
 }
 
 .ag-theme-alpine .ag-body-horizontal-scroll-viewport,
 .ag-theme-alpine .ag-body-vertical-scroll-viewport {
   overflow: auto !important;
-  background-color: #0b1a2c;
+  background-color: #233847;
 }
 
 .ag-theme-alpine .ag-root-wrapper {
-  background-color: #0b1a2c;
+  background-color: #121b30;
 }
 
-.bootstrap-navbar {
-  background-color: rgba(0, 0, 20, 0.7) !important;
+.ag-theme-alpine .ag-body-horizontal-scroll-viewport::-webkit-scrollbar,
+.ag-theme-alpine .ag-body-vertical-scroll-viewport::-webkit-scrollbar {
+  display: none;
 }
 
-.nav-dropdown-item {
-  color: #f1f1f1 !important;
-  background-color: rgba(0, 0, 20, 0.7) !important;
+.ag-theme-alpine {
+  scrollbar-width: none;
 }
 
-.nav-dropdown-item:hover {
-  background-color: rgba(0, 0, 20, 0.5) !important;
-  color: #ffffff !important;
+.ag-theme-alpine .ag-body-horizontal-scroll-viewport,
+.ag-theme-alpine .ag-body-vertical-scroll-viewport {
+  margin-bottom: -20px;
+  margin-right: -20px;
 }
 
-.bootstrap-navbar a {
-  font-size: 1.5rem !important;
-  color: #f1f1f1 !important;
+.ag-theme-alpine .ag-root-wrapper-body {
+  margin-right: -15px; /* Стандартная ширина скроллбара */
+  margin-bottom: -17px;
 }
 
-.bootstrap-navbar a:hover {
-  color: #ffffff !important;
+/* Веб-кит (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 10px; /* Ширина полосы прокрутки */
 }
 
-.bootstrap-navbar a.active {
-  color: #ffffff !important;
+::-webkit-scrollbar-track {
+  background: #0d2130; /* Цвет фона дорожки полосы прокрутки */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #192e3d; /* Цвет ползунка полосы прокрутки */
+  border-radius: 5px; /* Закругление углов ползунка */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin; /* Ширина полосы прокрутки */
+  scrollbar-color: rgba(23, 45, 84, 1) rgba(11, 26, 44, 1); /* Цвет ползунка и дорожки полосы прокрутки */
 }
